# huffman-zipper

./: .gitignore  CMakeLists.txt  README.md  target.txt  test.txt  vcpkg.json
GoogleTest/: CMakeLists.txt  gtest_main.cpp
include/: HuffmanCompressor.hpp  HuffmanDecoder.hpp  HuffmanEncoder.hpp  HuffmanNode.hpp  HuffmanTree.hpp  WorkerThread.hpp  mainwindow.h  models.hpp  utils.hpp
resources/: resources.rc
src/: main.cpp  mainwindow.cpp
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
